--- a/index.html
+++ b/index.html
@@ -6,50 +6,49 @@
     <!--- meta http-equiv="X-UA-Compatible" content="IE=edge" -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tetris Game</title>
+    <!--- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <!--- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/requirejs-plugins@1.0.3/css/requirejs-plugins.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rivets@0.9.6/dist/rivets.bundled.min.js">
     <link rel="stylesheet" href="style.css">
 </head>
+  
+<script type="text/javascript">
+    var rando = Math.floor(Math.random() * 100000);
+    var script = document.createElement('script');
+    script.src = 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js';
+    script.setAttribute("data-main",'config.js?v=' + rando);
+    document.getElementsByTagName('head')[0].appendChild(script);
+</script>
+<script src="https://cdn.jsdelivr.net/npm/rivets@0.9.6/dist/rivets.bundled.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/requirejs-plugins@1.0.3/src/async.js"></script>
 
-<body>
+<style>
+    body, html {
+        height: 100%;
+    }
+    
+    .row{
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    
+    </style>
+
+<body onload ='draw()'>
     <div class="main-container">
         <div class="game-container">
             <canvas id ="tetrisCanvas"></canvas>
         </div>
         <div id="gameInfo">
             <div id="score"> Score: 0 </div>
-            <button id="restartButton" style="display: none;"></button>
+            <button id='restartButton' style='display: none;'></button>
         </div>
+        <p id='showGrid'></p>
     </div>
-    <script src="main.js">
-        const canvas = document.getElementById("tetrisCanvas");
-        const ctx = canvas.getContext("2d");
-
-        // Tetris grid settings
-        const cols = 10;
-        const rows = 20;
-        const blockSize = 30;
-
-        // Set canvas size
-        canvas.width = cols * blockSize;
-        canvas.height = rows * blockSize;
-
-        // Draw the grid
-        function drawGrid() {
-            ctx.strokeStyle = "#333";
-            ctx.lineWidth = 0.5;
-            for (let x = 0; x <= cols; x++) {
-                ctx.beginPath();
-                ctx.moveTo(x * blockSize, 0);
-                ctx.lineTo(x * blockSize, canvas.height);
-                ctx.stroke();
-            }
-            for (let y = 0; y <= rows; y++) {
-                ctx.beginPath();
-                ctx.moveTo(0, y * blockSize);
-                ctx.lineTo(canvas.width, y * blockSize);
-                ctx.stroke();
-            }
-        }
-        drawGrid();
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
