--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <body onload ='draw()'>
     <div class="main-container">
         <div id="score"> Score: 0 </div>
+        <button id="playButton">Play</button>
+        <button id="pauseButton">Pause</button>
         <div class="game-container">
             <canvas id ="tetrisCanvas"></canvas>
         </div>
