--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 <body onload ='draw()'>
     <div class="main-container">
         <div id="score"> Score: 0 </div>
-        <button id="playButton">Play</button>
-        <button id="pauseButton">Pause</button>
+        <button id="playButton" class = "button">Play</button>
+        <button id="pauseButton" class = "button" style='display: none;'>Pause</button>
         <div class="game-container">
             <canvas id ="tetrisCanvas"></canvas>
         </div>
         <div id="gameInfo">
 
-            <button id='restartButton' style='display: none;'></button>
+            <button id='restartButton' class = "button" style='display: none;'>Restart Game</button>
         </div>
         <p id='showGrid'></p>
     </div>
